--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "rooks": "^7.14.1",
     "swiper": "^10.3.0",
+    "uuid": "^9.0.0",
     "typescript": "5.2.2"
   }
 }
