--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^10.16.4",
     "lottie-react": "^2.4.0",
     "million": "^2.6.0",
+    "moment": "^2.29.4",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
