--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@types/react-simple-maps": "^3.0.0",
+    "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.16.4",
