--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
         "titleBar.inactiveBackground": "#61dafb99",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#61dafb"
+    "peacock.color": "#61dafb",
+    "editor.inlineSuggest.showToolbar": "always"
 } // {
 //     "workbench.colorCustomizations": {
 //         "activityBar.activeBackground": "#93e6fc",
