--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/react-scroll": "^1.8.10",
     "@types/react-simple-maps": "^3.0.0",
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
@@ -31,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
+    "react-scroll": "^1.9.0",
     "react-simple-map": "^3.0.2",
     "react-simple-maps": "^3.0.0",
     "react-toggle-dark-mode": "^1.1.1",
