--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@types/react-simple-maps": "^3.0.0",
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.2",
+    "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.16.4",
     "lottie-react": "^2.4.0",
     "million": "^2.6.0",
     "moment": "^2.29.4",
-    "next": "13.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-scroll": "^1.9.0",
