--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^5.17.19",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@types/react-scroll": "^1.8.10",
     "@types/react-simple-maps": "^3.0.0",
+    "@web3modal/wagmi": "4.0.0-alpha.2",
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "^14.0.4",
@@ -42,6 +44,8 @@
     "rooks": "^7.14.1",
     "swiper": "^10.3.0",
     "typescript": "5.2.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "viem": "^2.5.0",
+    "wagmi": "^2.5.2"
   }
 }
