--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-scroll": "^1.8.10",
     "@types/react-simple-maps": "^3.0.0",
     "@web3modal/wagmi": "4.0.0-alpha.2",
+    "clipboard-copy": "^4.0.1",
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "^14.0.4",
