--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scroll": "^1.9.0",
     "react-simple-map": "^3.0.2",
     "react-simple-maps": "^3.0.0",
+    "react-spinners": "^0.13.8",
     "react-toggle-dark-mode": "^1.1.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
