chore:: added prisma

--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
 NEXT_PUBLIC_PROJECT_ID=f34a7a9265b0a2846c88cc89d9407ce5
 NEXT_ETH_ABJ_ADDRESS=0xa38df2B6F92D9D4116e4b04c307286B5ed189138
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://postgres:ctzmqeumFRGGdiWMjqTogzOnAXYkuWlj@viaduct.proxy.rlwy.net:36000/railway"
