Refactor Donation Dapp code and added new features

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-NEXT_PUBLIC_PROJECT_ID=YOUR_PROJECT_ID
+# 
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=YOUR_PROJECT_ID 
+NEXT_ETH_ABJ_ADDRESS=0xa38df2B6F92D9D4116e4b04c307286B5ed189138
 
-DATABASE_URL=""
+# reach out to the admin for this
+DATABASE_URL="" 
