--- a/package.json
+++ b/package.json
@@ -11,49 +11,52 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/next-js": "^2.1.5",
-    "@chakra-ui/react": "^2.8.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@prisma/client": "^5.12.1",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^5.17.19",
-    "@types/node": "20.6.3",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@tanstack/react-query": "^5.31.0",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
     "@types/react-scroll": "^1.8.10",
-    "@types/react-simple-maps": "^3.0.0",
-    "@web3modal/wagmi": "4.0.0-alpha.2",
+    "@types/react-simple-maps": "^3.0.4",
+    "@web3modal/wagmi": "4.1.11",
     "axios": "^1.6.8",
     "clipboard-copy": "^4.0.1",
-    "clsx": "^2.0.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "^14.0.4",
-    "framer-motion": "^10.16.4",
+    "clsx": "^2.1.0",
+    "eslint": "9.1.0",
+    "eslint-config-next": "^14.2.2",
+    "ethers": "^6.12.0",
+    "framer-motion": "^11.1.7",
     "lottie-react": "^2.4.0",
-    "million": "^2.6.0",
-    "moment": "^2.29.4",
-    "next": "^14.0.4",
+    "million": "^3.0.6",
+    "moment": "^2.30.1",
+    "next": "^14.2.2",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.6.2",
-    "react-icons": "^4.11.0",
-    "react-redux": "^8.1.2",
+    "react-fast-marquee": "^1.6.4",
+    "react-icons": "^5.1.0",
+    "react-redux": "^9.1.1",
     "react-scroll": "^1.9.0",
     "react-simple-map": "^3.0.2",
     "react-simple-maps": "^3.0.0",
     "react-spinners": "^0.13.8",
     "react-toggle-dark-mode": "^1.1.1",
-    "redux": "^4.2.1",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "rooks": "^7.14.1",
-    "swiper": "^10.3.0",
-    "typescript": "5.2.2",
+    "swiper": "^11.1.1",
+    "typescript": "5.4.5",
     "uuid": "^9.0.0",
-    "viem": "^2.5.0",
-    "wagmi": "^2.5.2"
+    "viem": "^2.9.25",
+    "wagmi": "^2.5.20"
   },
   "devDependencies": {
+    "browserslist": "4.23.0",
     "prisma": "^5.12.1"
   }
 }
