--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "18.2.25",
     "@types/react-scroll": "^1.8.10",
     "@types/react-simple-maps": "^3.0.4",
+    "@wagmi/core": "^2.10.5",
     "@web3modal/wagmi": "4.1.11",
     "axios": "^1.6.8",
     "clipboard-copy": "^4.0.1",
